# Rasterizer

./: Assert.h  BaseComp.cpp  BaseComp.h  CMakeLists.txt  CameraComp.cpp  CameraComp.h  MathHelper.cpp  MathHelper.h  ModelBase.cpp  ModelBase.h  ModelComp.cpp  ModelComp.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  VertexData.h  Window.cpp  Window.h  ctx.h  genericShader.h  lambdaShader.h  main.cpp
Base/: ArithmeticalPack.h  LogicalPack.h
SIMD/: #CMakeLists.txt
SIMD/SSE/: Pack4b.h  Pack4f.h
